# InfiniTAM_jeffrey

./: CMakeLists.txt  plugin.cpp
Apps/InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp  UIEngine.cpp  UIEngine.h
Apps/InfiniTAM_cli/: CLIEngine.cpp  CLIEngine.h  CMakeLists.txt  InfiniTAM_cli.cpp  plugin.cpp
ILLIXR/: CMakeLists.txt  plugin.cpp
ITMLib/: ITMLibDefines.h
ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.h  ITMDenseMapper.h  ITMDenseMapper.tpp  ITMMainEngine.h  ITMMultiEngine.h
ITMLib/Engines/Meshing/CPU/: ITMMeshingEngine_CPU.tpp
ITMLib/Engines/Meshing/CUDA/: ITMMeshingEngine_CUDA.tcu
ITMLib/Engines/Meshing/Shared/: ITMMeshingEngine_Shared.h
ITMLib/Engines/Reconstruction/CPU/: ITMSceneReconstructionEngine_CPU.h  ITMSceneReconstructionEngine_CPU.tpp
ITMLib/Engines/Reconstruction/CUDA/: ITMSceneReconstructionEngine_CUDA.h  ITMSceneReconstructionEngine_CUDA.tcu
ITMLib/Engines/Reconstruction/Interface/: ITMSceneReconstructionEngine.h
ITMLib/Engines/Reconstruction/Metal/: ITMSceneReconstructionEngine_Metal.h  ITMSceneReconstructionEngine_Metal.mm
ITMLib/Engines/ViewBuilding/CPU/: ITMViewBuilder_CPU.cpp  (+2 more)
ITMLib/Objects/Meshing/: ITMMesh.h
ITMLib/Objects/RenderStates/: ITMRenderState_VH.h
ITMLib/Objects/Scene/: ITMRepresentationAccess.h  ITMScene.h  ITMVoxelBlockHash.h  ITMVoxelTypes.h
ITMLib/Utils/: ITMCUDAUtils.h  ITMLibSettings.cpp  ITMLibSettings.h
InputSource/: ImageSourceEngine.cpp  ImageSourceEngine.h
ORUtils/: CMakeLists.txt  CUDADefines.h  PIDController.h  SE3Pose.cpp  SE3Pose.h  Trace.h
cmake/: Flags.cmake  LinkBoost.cmake  UseCUDA.cmake  UseOpenNI.cmake
samples/ETH3D-sofa1/: groundtruth.txt  rgbd.txt
samples/ETH3D-table_3/poses/: groundtruth.txt  orb-rgbd-align.txt  orbslam3.txt  rgbd.txt
scripts/InfiniTAM/: ETH3D.sh  EuRoC.sh  ICL_NUIM.sh  InteriorNet.sh  KITTI_odo_00.sh  L515.sh  ScanNet.sh  TUM_fr1.sh  TUM_fr2.sh  TUM_fr3.sh  VCU_RVI.sh
scripts/InfiniTAM-BE/: ETH3D.sh  EuRoC.sh  ICL_NUIM.sh  InteriorNet.sh  KITTI_odo_00.sh  ScanNet.sh  TUM_fr1.sh  TUM_fr2.sh  TUM_fr3.sh  VCU_RVI.sh
scripts/InfiniTAM/0123-pyh-param/: lab-simple1.txt  lab-simple2.txt  lab-simple3.txt
scripts/InfiniTAM/0123-tum/: fr1_rpy.txt  fr2_desk.txt  fr2_rpy.txt  fr2_xyz.txt
scripts/InfiniTAM/0125-cut-beginning/: lab-simple1.txt  lab-simple2.txt  lab-simple3.txt
scripts/InfiniTAM/0202-lab-simple-all/: lab-simple1.txt  lab-simple2.txt  lab-simple3.txt
scripts/InfiniTAM/0207-partial-recons/: lab-simple3-5800-5810.txt  lab-simple3-5815-5825.txt
scripts/InfiniTAM/0214-all-seq/: corridor4.txt  hall1.txt  lab-bumper2.txt  lab-bumper5.txt  lab-dynamic5.txt  lab-light4.txt  lab-manual3.txt  lab-motion3.txt
scripts/InfiniTAM/0221-icl-nuim/: living-kt0.txt  living-kt1.txt  office-kt0.txt  office-kt1.txt
scripts/InfiniTAM/0318-eth3d/: ceiling1.txt  desk3.txt  large-loop1.txt  mannequin-face2.txt  mannequin1.txt  plant-scene1.txt  plant5.txt  repetitive.txt  sofa1.txt  table3.txt
scripts/InfiniTAM/default_param/: lab-simple1.txt  lab-simple2.txt  lab-simple3.txt
scripts/calibration/: ETH3D.txt  EuRoC.txt  ICL_NUIM.txt  InteriorNet.txt  L515.txt  ScanNet.txt  TUM_fr1.txt  TUM_fr2.txt  TUM_fr3.txt  VCU_RVI.txt
scripts/graphs/: bricks.plt  controller.plt  execution.plt  plot.sh  voxels.plt
scripts/misc/: benchmark_atlas.py  clean_mesh.py
(+1 files in other folders)
